--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ coverage
 /cypress/screenshots/
 
 /packages/*/storybook-static/
+/lib/
 
 # Editor directories and files
 .vscode/*
@@ -28,3 +29,6 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+
+*/**/cache/*
